--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,13 @@ compress_html:
 
 # Defaults
 defaults:
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
   # _posts
   - scope:
       path: ""
