--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,44 +1,18 @@
-docs:
-  - title: Getting Started
-    children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
+# main links
+main:
+  - title: "Home"
+    url: /index.html
+  #- title: "Read me"
+    #url: /about/
+  - title: "Category"
+    url: /categories/
+  - title: "Tag"
+    url: /tags/
+  - title: "Post by Year"
+    url: /year-archive/
+ 
 
-  - title: Customization
-    children:
-      - title: "Configuration"
-        url: /docs/configuration/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
-
-  - title: Content
-    children:
-      - title: "Working with Posts"
-        url: /docs/posts/
-      - title: "Working with Pages"
-        url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
-
-  - title: Extras
-    children:
-      - title: "Stylesheets"
-        url: /docs/stylesheets/
-      - title: "JavaScript"
-        url: /docs/javascript/
+# 카테고리 추가시 
+  # 1. _includes/nav_list_main 에서 코드를 추가한다.
+    # sidebar.html 에서 머릿말에 sidebar_main = true 를 해주면 nav_list_main 을 불러오게끔 마지막 부분에 코딩이 되어있다.
+  # 2. pages/catecory 에 연결할 카테고리 페이지를 추가한다.
