--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "Jenny's Coding Blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jiyoon Han"
-description              : "An amazing website."
+description              : "developer"
 url                      : https://yyoooona.github.io/
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -32,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus"
   disqus:
-    shortname            : dev-hundred-blog # Short-name
+    shortname            : yyoooona-blog # Short-name
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -52,8 +52,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true
-search_full_content      : false
-search_provider          : # lunr (default), algolia, google
+search_full_content      : true
+search_provider          : # algolia
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -96,7 +96,7 @@ author:
   name             : "Jiyoon Han"
   avatar           : "/assets/images/mong.PNG"
   bio              : "developer"
-#   location         : "Somewhere"
+  location         : "Republic of Korea"
   email            : yyoooona@gmail.com
   links:
     - label: "Email"
@@ -285,3 +285,10 @@ defaults:
       comments: true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
