--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ko-KR"
+locale                   : "en-US"
 title                    : "Jenny's Coding Blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
@@ -239,9 +239,9 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
-category_archive:
+algorithm_archive:
   type: liquid
-  path: /categories/
+  path: /algorithms/
 tag_archive:
   type: liquid
   path: /tags/
