--- a/_config.yml
+++ b/_config.yml
@@ -101,11 +101,11 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:yyoooona@gmail.com"
-     - label: "Website"
+      url: "mailto:yyoooona@gmail.com"
+    - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-     - label: "Twitter"
+    - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Facebook"
