--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   name             : "Jiyoon Han"
   avatar           : "/assets/images/mong.PNG"
   bio              : "developer"
-  location         : "Republic of Korea"
+  location         : "Seoul, Republic of Korea"
   # email            : yyoooona@gmail.com
   links:
     - label: "Email"
